--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,10 +1,9 @@
 /*  
 Theme Name: Ocadia
-Theme URI: http://beccary.com/goodies/wordpress-themes/
 Description: A two column blue-grey theme, clean yet stylish. 
-Version: 1.41
-Author: Becca Wei
-Author URI: http://beccary.com
+Version: 1.45
+Author: rustaeja
+Author URI: vk.com/rustaeja
 */
 
 /* Basics */
